--- a/docs/ai-router/advanced/advanced-usage.mdx
+++ b/docs/ai-router/advanced/advanced-usage.mdx
@@ -8,7 +8,7 @@ description: 'Explore advanced features for building complex multi-agent systems
 Agents can call other agents using the `next` object:
 
 ```typescript
-router.agent('/orchestrator', async ctx => {
+router.agent('/orchestrator', async (ctx) => {
   // Call another agent
   const result = await ctx.next.callAgent('/worker', { task: 'process-data' });
 
@@ -17,7 +17,7 @@ router.agent('/orchestrator', async ctx => {
   }
 });
 
-router.agent('/worker', async ctx => {
+router.agent('/worker', async (ctx) => {
   const { task } = ctx.request.params;
   return `Processed: ${task}`;
 });
@@ -29,7 +29,7 @@ When working with nested routers (sub-agents), you might need to call an agent o
 
 ```typescript
 // In a sub-agent mounted at /code-generator/validator
-router.agent('/', async ctx => {
+router.agent('/', async (ctx) => {
   // ... some logic
   // Call the receptionist agent, which is mounted at the root level
   await ctx.next.callAgent('@/receptionist', { task: 'new task' });
@@ -50,7 +50,7 @@ router.actAsTool('/code-generator', {
 });
 
 // The actual agent implementation when the registeres tool is called.
-router.agent('/code-generator', async ctx => {
+router.agent('/code-generator', async (ctx) => {
   const { requirements } = ctx.request.params;
 
   // Generate code using an LLM
@@ -73,58 +73,11 @@ router.agent('/code-generator', async ctx => {
 Support for dynamic routing with parameter extraction:
 
 ```typescript
-router.agent('/users/:userId/profile', async ctx => {
+router.agent('/users/:userId/profile', async (ctx) => {
   const { userId } = ctx.request.params;
   ctx.response.write({
     type: 'text',
     text: `Loading profile for user: ${userId}`,
-  });
-});
-
-router.tool(
-  '/posts/:postId/comments/:commentId',
-  {
-    schema: z.object({
-      action: z.enum(['read', 'update', 'delete']),
-    }),
-    description: 'Manage post comments',
-  },
-  async (ctx, params) => {
-    const { postId, commentId } = ctx.request.params;
-    const { action } = params;
-
-    return `Performing ${action} on comment ${commentId} of post ${postId}`;
-  },
-);
-```
-
-### State Management
-
-Share state across agents and middleware:
-
-```typescript
-interface AppState {
-  userSession: string;
-  requestCount: number;
-}
-
-const router = new AiRouter<any, any, any, AppState>();
-
-const sessionMiddleware = async (ctx, next) => {
-  // Initialize state
-  if (!ctx.state.userSession) {
-    ctx.state.userSession = generateId();
-    ctx.state.requestCount = 0;
-  }
-
-  ctx.state.requestCount++;
-  await next();
-};
-
-router.agent('/dashboard', async ctx => {
-  ctx.response.write({
-    type: 'text',
-    text: `Session: ${ctx.state.userSession}, Requests: ${ctx.state.requestCount}`,
   });
 });
 ```
@@ -134,7 +87,7 @@ router.agent('/dashboard', async ctx => {
 The router provides structured error handling:
 
 ```typescript
-router.agent('/protected', async ctx => {
+router.agent('/protected', async (ctx) => {
   try {
     // Your agent logic
     const result = await riskyOperation();
@@ -147,175 +100,4 @@ router.agent('/protected', async ctx => {
     });
   }
 });
-```
-
-### Advanced Tool Attachment Patterns
-
-#### Conditional Tool Attachment
-
-You can conditionally attach tools based on context:
-
-```typescript
-router.agent('/contextual-assistant', async ctx => {
-  const { query, userRole } = ctx.request.params;
-
-  // Build tools object conditionally
-  const tools: Record<string, any> = {
-    calculator: ctx.next.attachTool('/calculator'),
-  };
-
-  // Only attach admin tools for admin users
-  if (userRole === 'admin') {
-    tools.adminOperations = ctx.next.agentAsTool('/admin/operations');
-    tools.userManagement = ctx.next.attachTool('/admin/users');
-  }
-
-  const { text } = await generateText({
-    model: openai('gpt-4'),
-    prompt: query,
-    tools,
-  });
-
-  ctx.response.write({ type: 'text', text });
-});
-```
-
-## Tool Composition
-
-Tools can be composed to create complex functionality:
-
-```typescript
-// Base tool for data transformation
-router.tool(
-  '/data-transformer',
-  {
-    schema: z.object({
-      data: z.any(),
-      transform: z.enum(['uppercase', 'lowercase', 'reverse']),
-    }),
-    description: 'Transforms data in various ways',
-  },
-  async (ctx, params) => {
-    const { data, transform } = params;
-
-    switch (transform) {
-      case 'uppercase':
-        return typeof data === 'string' ? data.toUpperCase() : data;
-      case 'lowercase':
-        return typeof data === 'string' ? data.toLowerCase() : data;
-      case 'reverse':
-        return typeof data === 'string'
-          ? data.split('').reverse().join('')
-          : data;
-    }
-  },
-);
-
-// Composed tool that uses multiple transformations
-router.tool(
-  '/advanced-transformer',
-  {
-    schema: z.object({
-      data: z.string(),
-      transformations: z.array(z.enum(['uppercase', 'lowercase', 'reverse'])),
-    }),
-    description: 'Applies multiple transformations to data',
-  },
-  async (ctx, params) => {
-    const { data, transformations } = params;
-
-    let result = data;
-    for (const transform of transformations) {
-      const transformResult = await ctx.next.callTool('/data-transformer', {
-        data: result,
-        transform,
-      });
-      result = transformResult.data;
-    }
-
-    return result;
-  },
-);
-```
-
-## Tool with State Access
-
-Tools can access and modify shared state:
-
-```typescript
-router.tool(
-  '/cache-manager',
-  {
-    schema: z.object({
-      key: z.string(),
-      value: z.any().optional(),
-      action: z.enum(['get', 'set', 'delete']),
-    }),
-    description: 'Manages shared cache state',
-  },
-  async (ctx, params) => {
-    const { key, value, action } = params;
-
-    // Initialize cache if it doesn't exist
-    if (!ctx.state.cache) {
-      ctx.state.cache = new Map();
-    }
-
-    switch (action) {
-      case 'get':
-        return ctx.state.cache.get(key) || null;
-      case 'set':
-        ctx.state.cache.set(key, value);
-        return { success: true, key, value };
-      case 'delete':
-        const deleted = ctx.state.cache.delete(key);
-        return { success: deleted, key };
-    }
-  },
-);
-```
-
-## Tool Testing
-
-Tools can be tested independently:
-
-```typescript
-// Tool definition
-router.tool(
-  '/string-processor',
-  {
-    schema: z.object({
-      text: z.string(),
-      operations: z.array(z.enum(['trim', 'uppercase', 'lowercase'])),
-    }),
-    description: 'Processes strings with multiple operations',
-  },
-  async (ctx, params) => {
-    const { text, operations } = params;
-
-    let result = text;
-    for (const operation of operations) {
-      switch (operation) {
-        case 'trim':
-          result = result.trim();
-          break;
-        case 'uppercase':
-          result = result.toUpperCase();
-          break;
-        case 'lowercase':
-          result = result.toLowerCase();
-          break;
-      }
-    }
-
-    return result;
-  },
-);
-
-// Test the tool
-const testResult = await router.callTool('/string-processor', {
-  text: '  Hello World  ',
-  operations: ['trim', 'uppercase'],
-});
-console.log(testResult); // "HELLO WORLD"
 ```
