--- a/docs/ai-router/foundation/middleware.mdx
+++ b/docs/ai-router/foundation/middleware.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Middleware'
+title: 'Example Middlewares'
+sidebarTitle: 'Example Middlewares'
 description: 'Learn how to use middleware for cross-cutting concerns in AI Router.'
 ---
 
@@ -51,7 +52,7 @@ const authMiddleware = async (ctx, next) => {
 // Apply middleware to specific paths
 router.use('/protected/*', authMiddleware);
 
-router.agent('/protected/dashboard', async ctx => {
+router.agent('/protected/dashboard', async (ctx) => {
   const { user } = ctx.state;
   ctx.response.write({
     type: 'text',
@@ -166,7 +167,7 @@ const rateLimitMiddleware = async (ctx, next) => {
   const maxRequests = 10;
 
   const userRequests = rateLimitMap.get(key) || [];
-  const recentRequests = userRequests.filter(time => now - time < windowMs);
+  const recentRequests = userRequests.filter((time) => now - time < windowMs);
 
   if (recentRequests.length >= maxRequests) {
     throw new Error('Rate limit exceeded');
